# gpt2-tamil

./: .gitignore  README.md  attention.py  config.py  gpt2.py  pyproject.toml  trainer.py
layers/: __init__.py  attention.py  feed_forward.py  gpt.py  transformer_block.py
tokenization/: train_tokenizer.py
train/: trainer.py
utils/: __init__.py  data_loader.py
