[tool.poetry]
name = "gpt2-tamil"
version = "0.1.0"
description = ""
authors = ["JINO-ROHIT <find.jinorohit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentencepiece = "^0.2.0"
loguru = "^0.7.3"
tqdm = "^4.67.1"
wandb = "^0.19.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

################################################################################## linting part

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 119
exclude = ["*.ipynb"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
